# MyRemoteTouch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
docs/: DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_ZH.md
src/: App.jsx  App.tsx  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  config.rs  error.rs  ios_proxy.rs  main.rs  video_stream.rs  wda_client.rs
src-tauri/src/clients/: mod.rs  wda.rs
src-tauri/src/commands/: device.rs  hardware.rs  mod.rs  smart_task.rs  touch.rs  window.rs
src-tauri/src/gestures/: factory.rs  mod.rs  types.rs
src-tauri/src/gestures/traits/: double_tap.rs  drag.rs  long_press.rs  mod.rs  swipe.rs  tap.rs
src-tauri/src/gestures/w3c/: builder.rs  double_tap.rs  drag.rs  long_press.rs  mod.rs  swipe.rs  tap.rs
src-tauri/src/gestures/wda/: double_tap.rs  drag.rs  long_press.rs  mod.rs  swipe.rs  tap.rs
src-tauri/src/services/: device.rs  health.rs  mod.rs  proxy.rs  video.rs
src-tauri/src/smart_task/: hybrid_selector.rs  inspector.rs  mod.rs  model.rs  ocr.rs  persistence.rs  runner.rs  snapshot.rs  template_matcher.rs
src-tauri/src/video/: config.rs  frame_pool.rs  h264.rs  h264_dvt.rs  mjpeg.rs  mod.rs  server.rs  traits.rs
src/components/: FPSMonitor.tsx  MoreOptions.tsx  Phone.tsx  PhoneScreen.jsx  PhoneScreen.tsx  PhoneWorkbench.tsx  Settings.jsx  Settings.tsx  Skeleton.tsx  Toolbar.jsx  Toolbar.tsx  TouchDebugPanel.tsx  (+1 more)
(+23 files in other folders)
