[package]
name = "my-remote-touch"
version = "0.1.0"
description = "iPhone Remote Touch Control"
authors = ["yan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "rt"] }
tauri-plugin-shell = "2.0.0-rc"
idevice = { version = "0.1.53", features = ["usbmuxd"] }
futures-util = "0.3.32"
plist = "1.8.0"
byteorder = "1.5.0"
thiserror = "2.0.11"
lazy_static = "1.5.0"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
tokio-util = "0.7.13"
futures = "0.3.32"
rusb = "0.9.4"
bytes = "1.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
async-trait = "0.1.89"
parking_lot = "0.12.5"


